--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
               <!-- Instagram -->
               <a
-                href="https://instagram.com/sandhikagalih"
+                href="https://instagram.com/fiqhi_fahriansyah"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -426,7 +426,7 @@
 
             <!-- Instagram -->
             <a
-              href="https://instagram.com/sandhikagalih"
+              href="https://instagram.com/fiqhi_fahriansyah"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
