--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="relative flex items-center justify-between">
           <div class="px-4">
-            <a href="#home" class="block py-6 text-lg font-bold text-primary">sandhikagalih</a>
+            <a href="#home" class="block py-6 text-lg font-bold text-primary">Fiqhi Fahriansyah</a>
           </div>
           <div class="flex items-center px-4">
             <button id="hamburger" name="hamburger" type="button" class="absolute right-4 block lg:hidden">
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
-            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Sandhika Galih</span></h1>
+            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Fiqhi Fahriansyah</span></h1>
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Lecturer & <span class="text-dark dark:text-white">Content Creator</span></h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">Belajar web programming itu mudah dan menyenangkan bukan. <span class="font-bold text-dark dark:text-white">bukan!</span></p>
 
@@ -85,7 +85,7 @@
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
-              <img src="dist/img/yu.jpg" alt="Sandhika Galih" class="relative z-10 mx-auto max-w-full" />
+              <img src="dist/img/yu.jpg" alt="Fiqhi Fahriansyah" class="relative z-10 mx-auto max-w-full" />
               <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -119,7 +119,7 @@
             <div class="flex items-center">
               <!-- Youtube -->
               <a
-                href="https://youtube.com/webprogrammingunpas"
+                href="https://www.youtube.com/@fiqhifahriansyah2151"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -147,7 +147,7 @@
 
               <!-- Twitter -->
               <a
-                href="https://twitter.com/sandhikagalih"
+                href="https://twitter.com/@fiq_key"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -161,7 +161,7 @@
 
               <!-- TikTok -->
               <a
-                href="https://tiktok.com/@sandhika.galih"
+                href="https://tiktok.com/@f1awsu"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -175,7 +175,7 @@
 
               <!-- LinkedIn -->
               <a
-                href="https://linkedin.com/in/sandhikagalih"
+                href="https://www.linkedin.com/in/fiqhi-fahriansyah-b74369251/"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -211,7 +211,7 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/1.png" alt="Landing Page" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Landing Page Sandhika Galih</h3>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Landing Page Fiqhi Fahriansyah</h3>
             <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
@@ -365,9 +365,10 @@
           <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
             <h2 class="mb-5 text-4xl font-bold text-white">WPU</h2>
             <h3 class="mb-2 text-2xl font-bold">Hubungi Kami</h3>
-            <p>sandhikagalih@gmail.com</p>
-            <p>Jl. Dr. Setiabudhi No. 193</p>
-            <p>Bandung</p>
+            <p>fiqhifahriansyah5@gmail.com</p>
+            <p>JL. Ahmad Yani Dusun FAJAR INDAH
+              Kelurahan Puncak Indah Kecamatan Malili</p>
+            <p>Sulawesi Selatan</p>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
             <h3 class="mb-5 text-xl font-semibold text-white">Kategori Tulisan</h3>
@@ -412,7 +413,7 @@
           <div class="mb-5 flex items-center justify-center">
             <!-- Youtube -->
             <a
-              href="https://youtube.com/webprogrammingunpas"
+              href="https://www.youtube.com/@fiqhifahriansyah2151"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -440,7 +441,7 @@
 
             <!-- Twitter -->
             <a
-              href="https://twitter.com/sandhikagalih"
+              href="https://twitter.com/@fiq_key"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -454,7 +455,7 @@
 
             <!-- TikTok -->
             <a
-              href="https://tiktok.com/@sandhika.galih"
+              href="https://tiktok.com/@f1awsu"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -468,7 +469,7 @@
 
             <!-- LinkedIn -->
             <a
-              href="https://linkedin.com/in/sandhikagalih"
+              href="https://www.linkedin.com/in/fiqhi-fahriansyah-b74369251/"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -481,7 +482,7 @@
             </a>
           </div>
           <p class="text-center text-xs font-medium text-slate-500">
-            Dibuat dengan <span class="text-pink-500">❤️</span> oleh <a href="https://instagram.com/sandhikagalih" target="_blank" class="font-bold text-primary">Sandhika Galih</a>, menggunakan
+            Dibuat dengan <span class="text-pink-500">❤️</span> oleh <a href="https://instagram.com/fiqhi_fahriansyah" target="_blank" class="font-bold text-primary">Fiqhi Fahriansyah</a>, menggunakan
             <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS</a>.
           </p>
         </div>
