--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Fiqhi Fahriansyah</span></h1>
-            <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Lecturer & <span class="text-dark dark:text-white">Content Creator</span></h2>
-            <p class="mb-10 font-medium leading-relaxed text-secondary">Belajar web programming itu mudah dan menyenangkan bukan. <span class="font-bold text-dark dark:text-white">bukan!</span></p>
+            <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Student & <span class="text-dark dark:text-white"> Programmer</span></h2>
+            <p class="mb-10 font-medium leading-relaxed text-secondary">Information System, <span class="font-bold text-dark dark:text-white">Universitas Teknologi Yogyakarta </span></p>
 
             <a href="#contact" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Hubungi Saya</a>
           </div>
@@ -108,13 +108,13 @@
         <div class="flex flex-wrap">
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">Tentang Saya</h4>
-            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Yuk, belajar web programming sama Fiqhi !!</h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id temporibus maiores sequi vitae saepe iusto deleniti!</p>
+            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Fiqhi Fahriansyah, 
+              <div class="text-lg font-uppercase text-color">Seorang mahasiswa yang bersemangat dalam olahraga dan programming</div> </h2>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Selalu mengejar keseimbangan antara pengetahuan teknis dalam dunia komputer dan kesehatan fisik dengan penuh dedikasi.</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Mari berteman</h3>
-            <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quos, hic animi quasi ipsum exercitationem ipsam incidunt voluptatem.
+            <p class="mb-6 text-base font-medium text-secondary lg:text-lg">Bersama-sama kita dapat menjelajahi dunia dengan semangat dan kegembiraan yang tak terbatas.
             </p>
             <div class="flex items-center">
               <!-- Youtube -->
@@ -201,7 +201,7 @@
             <h4 class="mb-2 text-lg font-semibold text-primary">Portfolio</h4>
             <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Project Terbaru</h2>
             <p class="text-md font-medium text-secondary md:text-lg">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus porro consequuntur alias, commodi nemo enim aliquam ipsam obcaecati? Assumenda, ipsam?
+              Proyek terbaru saya adalah sebuah inovasi yang akan mengubah cara orang berinteraksi dengan teknologi.Saya berkomitmen untuk memberikan solusi terbaik kepada pelanggan.
             </p>
           </div>
         </div>
@@ -211,29 +211,29 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/1.png" alt="Landing Page" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Landing Page Fiqhi Fahriansyah</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Landing Page</h3>
+            <p class="text-base font-medium text-secondary">Selamat datang di halaman pribadi saya. Saya adalah seorang mahasiswa yang penuh semangat dalam olahraga dan programming. Mari jelajahi lebih lanjut tentang perjalanan dan minat saya.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/2.png" alt="E-Commerce" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">E-Commerce</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <p class="text-base font-medium text-secondary">Pada platform e-commerce ini, saya menawarkan berbagai produk berkualitas dan layanan yang memuaskan.Saya berkomitmen untuk memberikan pengalaman berbelanja yang mudah dan menyenangkan kepada pelanggan.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/3.png" alt="Technical Documentation" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Technical Documentation</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <p class="text-base font-medium text-secondary">Dalam mengembangkan perangkat lunak, penting untuk memahami struktur dan logika yang mendasarinya.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/4.png" alt="Tribute Page" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Tribute Page</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <p class="text-base font-medium text-secondary">Saya merayakan dan menghargai kontribusi luar biasa individu ini dalam masyarakat. Mereka telah menjadi panutan dan contoh yang luar biasa dalam banyak hal.</p>
           </div>
         </div>
       </div>
@@ -247,7 +247,7 @@
           <div class="mx-auto mb-16 text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Clients</h4>
             <h2 class="mb-4 text-3xl font-bold text-white dark:text-dark sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
-            <p class="text-md font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit facilis velit!</p>
+            <p class="text-md font-medium text-secondary md:text-lg">Klien-klien yang pernah bermitra dengan saya, saya senantiasa memberikan layanan terbaik. Saya berkomitmen untuk memenuhi kebutuhan dan harapan mereka dengan sepenuh hati.</p>
           </div>
         </div>
 
@@ -278,7 +278,7 @@
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Blog</h4>
             <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Tulisan Terkini</h2>
-            <p class="text-md font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quisquam perspiciatis blanditiis dolores?</p>
+            <p class="text-md font-medium text-secondary md:text-lg">Kabar terbaru dari dunia teknologi yang sedang menjadi perbincangan adalah kemajuan dalam kecerdasan buatan. Teknologi ini telah mengubah cara kita berinteraksi dengan komputer dan perangkat elektronik sehari-hari.</p>
           </div>
         </div>
 
@@ -290,7 +290,7 @@
                 <h3>
                   <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Tips Belajar Programming</a>
                 </h3>
-                <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat officia beatae quisquam?</p>
+                <p class="mb-6 text-base font-medium text-secondary">Berikut adalah beberapa tips yang berguna dalam belajar pemrograman. Jangan ragu untuk mengikuti langkah-langkah ini untuk meraih pemahaman yang lebih baik tentang dunia pemrograman.</p>
                 <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
@@ -302,7 +302,7 @@
                 <h3>
                   <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Review Keyboard GMMK Pro</a>
                 </h3>
-                <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi facilis illum in.</p>
+                <p class="mb-6 text-base font-medium text-secondary">Pengalaman menggunakan keyboard ini benar-benar luar biasa. Desain yang modern, saklar mekanis yang responsif, dan fitur-fitur canggih membuatnya menjadi salah satu pilihan terbaik untuk pecinta perangkat input.</p>
                 <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
@@ -314,7 +314,13 @@
                 <h3>
                   <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Menikmati Secangkir Kopi</a>
                 </h3>
-                <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, totam ipsum ea quam sequi velit sunt.</p>
+                <p class="mb-6 text-base font-medium text-secondary">Menikmati secangkir kopi sambil merasakan aroma khasnya, menjadi momen yang tak ternilai. Bagaimana rasa hangatnya menyapa dan mengusir kantuk, membuat hari ini terasa lebih bersemangat."
+
+
+
+
+
+                </p>
                 <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
@@ -331,7 +337,7 @@
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Contact</h4>
             <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
-            <p class="text-md font-medium text-secondary md:text-lg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, sed.</p>
+            <p class="text-md font-medium text-secondary md:text-lg">Jangan ragu untuk menghubungi, jika Anda memiliki pertanyaan atau membutuhkan bantuan. Saya siap membantu Anda dengan senang hati.</p>
           </div>
         </div>
 
